# dual-arm-panda

./: README.md
dual_arm_control/: package.xml  setup.py
dual_arm_control/config/: dual_arm.rviz
dual_arm_control/dual_arm_control/: set_joint_angles.py  set_sine_joint_angles.py
dual_arm_control/launch/: dual_arm_ROS_control_joints.launch.py  dual_arm_ROS_control_sine_wave.launch.py
dual_arm_moveit/: CMakeLists.txt  package.xml
dual_arm_moveit/launch/: dual_arm_moveit_cart_both_arms.launch.py  dual_arm_moveit_collision.launch.py  dual_arm_moveit_joint_space_both_arms.launch.py  dual_arm_moveit_lift.launch.py
dual_arm_moveit/src/: cartesian_eef_goal_both_arms.cpp  collision_potential.cpp  joint_space_goal_both_arms.cpp  lift_rotate.cpp
dual_arm_panda_moveit_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dual_arm_panda_moveit_gazebo/config/: moveit_controllers.yaml  ompl_planning.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  panda_arm_macro.xacro  panda_hand.ros2_control.xacro  right_initial_positions.yaml  ros2_controllers.yaml  ros2_controllers_COPY.yaml
dual_arm_panda_moveit_gazebo/launch/: demo.launch.py  dual_arm_gazebo.launch.py  moveit.rviz
